# SAM-API-Dynamo-PoC

./: .env.json  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  run_local.sh  samconfig.toml  template.yaml
scripts/: api_test.sh  seed_db.py  setup_api_keys.py
src/: app.py  db.py
tests/: conftest.py  test_handler.py
