[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "user-api-sam"
version = "0.1.0"
description = "User API using SAM, API Gateway, Lambda, and DynamoDB"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.17",
    "aws-lambda-powertools>=2.43.1",
]

[tool.uv]
dev-dependencies = [
    "factory-boy>=3.3.1",
    "pytest-asyncio>=0.25.2",
    "pytest>=8.3.4",
    "ruff>=0.9.8",
    "pytest-mock>=3.12.0",
    "moto>=4.2.11",
    "aws-sam-cli>=1.135.0",
]



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools]
packages = ["src"]
